--- a/WK07.ipynb
+++ b/WK07.ipynb
@@ -1187,7 +1187,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "5020",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
